Fix RTL spacing of inproduct article info icon

--- a/kitsune/sumo/static/sumo/scss/components/_wiki.scss
+++ b/kitsune/sumo/static/sumo/scss/components/_wiki.scss
@@ -16,7 +16,7 @@ figure {
     img {
       width: 24px;
       height: 24px;
-      margin-right: p.$spacing-sm;
+      margin-inline-end: p.$spacing-sm;
     }
 
     figcaption {
